--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -29,6 +29,8 @@ to describe.
   =vulpea-project-p= can be optimised.
 - ~[2021-05-10 Mon]~: Update post to reflect changes in [[https://github.com/org-roam/org-roam/pull/1401][org-roam v2]]. Previous
   version of this article is available on [[https://github.com/d12frosted/d12frosted.io/blob/c16870cab6ebbaafdf73c7c3589abbd27c20ac52/posts/2021-01-16-task-management-with-roam-vol5.org][GitHub]].
+- ~[2021-08-19 Thu]~: [[https://github.com/Whil-][Gustav]] proposed to modify buffer only when tags have
+  changed. Code was updated accordingly (both in the post and on [[https://gist.github.com/d12frosted/a60e8ccb9aceba031af243dff0d19b2e][GitHub Gist]]).
 
 #+BEGIN_HTML
 <!--more-->
@@ -105,18 +107,24 @@ library (for now you should use [[https://github.com/d12frosted/vulpea/pull/92][
   (add-hook 'before-save-hook #'vulpea-project-update-tag)
 
   (defun vulpea-project-update-tag ()
-    "Update PROJECT tag in the current buffer."
-    (when (and (not (active-minibuffer-window))
-               (vulpea-buffer-p))
-      (save-excursion
-        (goto-char (point-min))
-        (let* ((tags (vulpea-buffer-tags-get))
-               (original-tags tags))
-          (if (vulpea-project-p)
-              (setq tags (cons "project" tags))
-            (setq tags (remove "project" tags)))
-          (unless (eq original-tags tags)
-            (apply #'vulpea-buffer-tags-set (seq-uniq tags)))))))
+        "Update PROJECT tag in the current buffer."
+        (when (and (not (active-minibuffer-window))
+                   (vulpea-buffer-p))
+          (save-excursion
+            (goto-char (point-min))
+            (let* ((tags (vulpea-buffer-tags-get))
+                   (original-tags tags))
+              (if (vulpea-project-p)
+                  (setq tags (cons "project" tags))
+                (setq tags (remove "project" tags)))
+
+              ;; cleanup duplicates
+              (setq tags (seq-uniq tags))
+
+              ;; update tags if changed
+              (when (or (seq-difference tags original-tags)
+                        (seq-difference original-tags tags))
+                (apply #'vulpea-buffer-tags-set tags))))))
 
   (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
@@ -265,8 +273,14 @@ For you convenience, the full code is displayed below. It is also available as
             (if (vulpea-project-p)
                 (setq tags (cons "project" tags))
               (setq tags (remove "project" tags)))
-            (unless (eq original-tags tags)
-              (apply #'vulpea-buffer-tags-set (seq-uniq tags)))))))
+
+            ;; cleanup duplicates
+            (setq tags (seq-uniq tags))
+
+            ;; update tags if changed
+            (when (or (seq-difference tags original-tags)
+                      (seq-difference original-tags tags))
+              (apply #'vulpea-buffer-tags-set tags))))))
 
   (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
