fix typo in function vulpea-tags-add

--- a/posts/2020-06-25-task-management-with-roam-vol3.org
+++ b/posts/2020-06-25-task-management-with-roam-vol3.org
@@ -119,7 +119,7 @@ from [[https://github.com/d12frosted/vulpea][vulpea]] library.
     "Add respective file tag if it's missing in the current note."
     (interactive)
     (let ((tags (vulpea-buffer-tags-get))
-          (tag (vulpea--title-as-tag)))
+          (tag (vulpea--title-to-tag)))
       (when (and (seq-contains-p tags "people")
                  (not (seq-contains-p tags tag)))
         (vulpea-buffer-tags-add tag))))
