--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -222,7 +222,7 @@ notes it becomes tedious to visit each of them and make sure that they have
 update state of =Project= tag. Fortunately, this task is easily automated.
 
 #+begin_src emacs-lisp
-  (dolist (file (org-roam--list-all-files))
+  (dolist (file (org-roam-list-files))
     (message "processing %s" file)
     (with-current-buffer (or (find-buffer-visiting file)
                              (find-file-noselect file))
